# hConfigGenerator

./: .gitignore  ConfigGenerator.hs  README.md  configGenerator.cabal  configGenerator.hs
Geckofinger/: FileIO.hs  StringTemplate.hs  Template.hs
templates/: test.json  test.st  test_angle.st
