Name:                configGenerator
Version:             0.1
Synopsis:            Generate config files from StringTemplates and JSON
Description:         Generate config files from StringTemplates and JSON
License:             GPL
License-file:        LICENSE
Author:              Matthias Krull
Maintainer:          Matthias Krull <m.krull@uninets.eu>
Build-Depends:       base,
                     bytestring == 0.9.2.1,
                     containers == 0.4.2.1,
                     aeson >= 0.6,
                     HStringTemplate == 0.7.1,
                     gf-template >= 0.1
Build-Type:          Simple
Executable:          configGenerator
Main-is:             ConfigGenerator.hs